--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,11 @@ img {
   display: flex;
   align-items: center;
 }
+.navigation {
+  display: flex;
+  align-items: center;
+  height: 80px;
+}
 .site-nav {
   display: flex;
   padding-left: 0;
@@ -239,7 +244,6 @@ img {
 }
 .adv-title {
   margin-bottom: 10px;
-  width: 270px;
 }
 .pick-us{
   display: flex;
@@ -248,11 +252,12 @@ img {
   font-size: 14px;
   line-height: 1.71;
 }
+
+.pick-us-item {
+  width: 270px;
+}
 .pick-us-item:not(:last-child) {
   margin-right: 30px;
-}
-.description {
-  width: 270px;
 }
 .pick-us .title {
   color: var(--title-text-color);
@@ -310,13 +315,13 @@ img {
   margin-right: 30px;
 }
 .our-team-item {
+  width: 270px;
   background-color: var(--primary-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 .member-box {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding: 30px 20px;
 }
 .member-box .title {
   margin-bottom: 10px;
@@ -372,9 +377,7 @@ img {
 .project-item {
   margin-right: 30px;
   margin-bottom: 30px;
-  max-width: 370px;
-  display: flex;
-  flex-direction: column;
+  width: 370px;
 }
 .project-item:nth-child(3n){
   margin-right: 0px;
